# OS_labs_3t

./: README.md
CP/doc/: MKK_dtruss  pow2_dtruss
CP/src/: alloc_MKK.hpp  alloc_pow2.hpp  test.cpp
KP/doc/: rep_KP.docx
KP/src/: alloc_MKK.hpp  alloc_pow2.hpp  small_blocks_test.txt  test.cpp  test.txt
lab1/doc/: Rep_1.docx  Zhadnov_1.docx
lab1/scr/: child.c  parent.c  test_err.txt  test_ok.txt
lab1/src/: child.c  parent.c
lab2/doc/: Zhadnov_2.docx
lab2/scr/: a.out  main.cpp  not_ok.txt  prog  sort  sort.cpp  super.txt  text.txt
lab2/scr/prog.dSYM/Contents/Resources/DWARF/: prog
lab2/scr/prog.dSYM/Contents/Resources/Relocations/x86_64/: prog.yml
lab2/src/: bad.txt  main.cpp  ok.txt  sort.cpp
lab3/doc/: Rep_3.docx
lab3/scr/: child.c  parent.c
lab3/src/: test_ok.txt
lab4/doc/: Rep_4.docx
lab4/src/: CMakeLists.txt  dynamic_main.c  first.c  lib.h  second.c  static_main.c
lab5-7/doc/: Rep_5-7.docx
lab5-7/src/: client.cpp  head.h  server.cpp  top_node.h  tree.h  ze_mes_queue.h
lab8/doc/: Zhadnov_8.docx
